<resources>
    <string name="app_name">Fusion Cosmetics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tt">TTActivity</string>
    <string name="item_sold_count">10</string>

    <!-- Fucsion project -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="heading_page">Heading</string>
    <string name="img_desc">Image Description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="duty_roster">Duty Roster</string>
    <string name="sales_tracking">Sales Tracking</string>
    <string name="item_sold">Item Sold</string>
    <string name="report">Dashboard</string>
    <string name="change_password">Change Password</string>
    <string name="membership">Membership</string>
    <string name="membership_profile_update">Profile Update</string>
    <string name="welcome">Welcome,</string>
    <string name="user">User </string>
    <string name="full_name">Full Name</string>
    <string name="id_number">ID Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="working_hours">Working Hours</string>
    <string name="off_day">Off Day</string>
    <string name="role">Role</string>
    <string name="team_manager">Team (Manager)</string>
    <string name="contact">Contact</string>
    <string name="date_sample">April 2015</string>
    <string name="date_full_sample">24 April 2015</string>
    <string name="store">Store: </string>
    <string name="date">Date</string>
    <string name="date_item_sold">Date:</string>
    <string name="keyword">Keyword</string>
    <string name="hintKeyword">Enter ID/Description/Price/Size</string>
    <string name="product_info">Product Info</string>
    <string name="item_id">Item ID</string>
    <string name="size">Size</string>
    <string name="price">Price: </string>
    <string name="number">1</string>
    <string name="dolla">$</string>
    <string name="sample_price">100</string>
    <string name="sample_size">150 ml</string>
    <string name="title">Title</string>
    <string name="message">Dialog Message!</string>
    <string name="quantity">0</string>
    <string name="pdf_link_sample">PDF link sample</string>
    <string name="path">/data/data/com.tvo.nano.fusioncosmetics/</string>
    <string name="product">Product</string>
    <string name="description">Description</string>
    <string name="dateinfo">Date Info</string>
    <string name="promotion">Promotion</string>
    <string name="previous_month">Sales Tracking (Previous Month)</string>
    <string name="current_month">Sales Tracking (Current Month)</string>
    <string name="category">Category</string>
    <string name="mtd">MTD</string>
    <string name="target">Target</string>
    <string name="achieved">Achieved</string>
    <string name="no_data">No Data</string>
    <string name="report_month">Report Month:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="validate_password">Confirm New Password not match with New Password</string>
    <string name="old_password_empty">Old Password is not empty</string>
    <string name="new_password_empty">New Password is not empty</string>
    <string name="error">Error</string>
    <string name="cannot_submit_sales_future_date">Cannot submit sales for future date.</string>
    <string name="cannot_submit_sales_yesterday_before">Cannot submit sales for more than one day before.</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="stars_logout">StarsLogout</string>
    <string name="login_again"> Please login again.</string>
    <string name="invalid_session">Invalid session</string>
    <string name="add_successfully">Added successfully.</string>
    <string name="item_already_added">Item was added.</string>
    <string name="info">Info</string>
    <string name="no_result">No result!</string>
    <string name="after_11am">After 11am, can only select date for today</string>
    <string name="utf8">UTF-8</string>
    <string name="submit_sales_successfully">Submit Sales successfully</string>
    <string name="submit_sales_fail">Submit Sales fail. Please try again.</string>
    <string name="title_activity_duty_roster">DutyRoster</string>
    <string name="something_wrong">Something wrong. Please login again.</string>
    <string name="something_wrong2">Something wrong. Please try again.</string>
    <string name="application_key">app.fusion.stars.com</string>
    <string name="salutation">Salutation</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="races">Race</string>
    <string name="nric_fin">NRIC/FIN</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="handphone">Handphone</string>
    <string name="home_office">Home/Office</string>
    <string name="status">Status</string>
    <string name="status2">Status:</string>
    <string name="singer">Single</string>
    <string name="married">Married</string>
    <string name="with_kids">With Kids</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="term">Please read and Agree to our </string>
    <string name="name_sample">Ng Gek Sai</string>
    <string name="membership_no">Membership No.:</string>
    <string name="date_of_issue">Date of Issue:</string>
    <string name="active">Active</string>
    <string name="date_sample_issue">27/08/2014</string>
    <string name="membership_no_sample">S9273283H</string>
    <string name="contact_no">Contact No.</string>
    <string name="term_link"><![CDATA[Term & Conditions]]></string>
    <string name="regex_ic_passport">^[a-zA-Z0-9\\s]*$</string>
    <string name="regex_email">^(.+)@(.+)$</string>
    <string name="regex_phone_no">^[89][0-9]{7}$</string>
</resources>
