<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/dutyRoster_rltTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dutyroster_subtopbar">

            <ImageView
                android:id="@+id/dutyRoster_imgArrowLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/dutyroster_imgarrowleft"
                android:contentDescription="@string/img_desc" />

            <TextView
                android:id="@+id/dutyRoster_tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/date_sample"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/dutyRoster_textSize"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/dutyRoster_imgArrowRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/dutyroster_imgarrowright"
                android:contentDescription="@string/img_desc" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dutyRoster_lnlContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dutyRoster_rltTop"
            android:background="@drawable/background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dutyRoster_tvReportMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/report_month"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/dutyRoster_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dutyRoster_tvNodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_data"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/dutyRoster_textSize"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>